dashboard/04-ingress-app.yaml
# ingress‐app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-frontend
  namespace: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kelompok3.osslab.my.id          
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
